--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sl-web-audio",
   "description": "Library for loading, playing, and processing web audio.",
-  "version": "1.0.6",
+  "version": "2.0.0",
   "author": "Erik Hermansen",
   "license": "MIT",
   "private": false,
@@ -21,16 +21,15 @@
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^30.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
-    "eslint": "^9.39.0",
-    "jest": "^30.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
+    "@vitest/coverage-v8": "^4.0.9",
+    "eslint": "^9.39.1",
     "jsdoc": "^4.0.2",
     "jsdoc-plugin-typescript": "^3.2.0",
-    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -74,6 +73,6 @@
     }
   },
   "dependencies": {
-    "sl-web-ogg": "^1.1.2"
+    "sl-web-ogg": "^2.0.0"
   }
 }
