--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sl-web-audio",
   "description": "Library for loading, playing, and processing web audio.",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "author": "Erik Hermansen",
   "license": "MIT",
   "private": false,
@@ -74,5 +74,6 @@
   },
   "dependencies": {
     "sl-web-ogg": "^2.0.1"
-  }
+  },
+  "sideEffects": false
 }
